# eb1analysis1

./: CHAT_REFERENCE.md  MCP_CASE_NUMBER_UPDATES.md  MCP_SETUP.md  MODEL_SELECTION_GUIDE.md  OPENAI_MODELS.md  QUICK_START_MCP.md  README.md  TOGETHER_MODELS.md  chat_with_db.py  pyproject.toml  test_chat.sh  test_chat_ml.sh  test_mcp.py  test_mcp_direct.py
.github/: copilot-instructions.md
src/aao_etl/: cli.py  config.py  criterion_insights.py  db.py  enrich.py  llm.py  mcp_server.py  models.py  pdf.py  pipeline.py
src/aao_etl/sql/: init_db.sql
