[project]
name = "aao-etl"
version = "0.1.0"
description = "AAO EB-1 decision ETL to local Postgres with pgvector, OpenAI+Instructor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2",
  "python-dotenv>=1.0",
  "pymupdf>=1.24",
  "openai>=1.40",
  "instructor>=1.3",
  "typer>=0.12",
]

[project.scripts]
aao = "aao_etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# >>> ADD THESE SECTIONS <<<
[tool.hatch.build.targets.wheel]
# Tell Hatch we're using a src/ layout
packages = ["src/aao_etl"]
# Include the SQL file in the wheel so the CLI works outside the repo
include = ["src/aao_etl/sql/init_db.sql"]

[tool.hatch.build.targets.sdist]
include = ["src/aao_etl", "README.md", "pyproject.toml"]
